--- a/UIKITDZ/UIKITDZ/Base.lproj/Main.storyboard
+++ b/UIKITDZ/UIKITDZ/Base.lproj/Main.storyboard
@@ -1,24 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--StoryBoard-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Traffic" title="StoryBoard" id="BYZ-38-t0r" customClass="TrafficLightStoryBoardViewController" customModule="UIKITDZ" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZQu-OC-WDB">
+                                <rect key="frame" x="84.666666666666686" y="67" width="221" height="663"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jX2-S7-wfc">
+                                <rect key="frame" x="89.666666666666686" y="77" width="211" height="211"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eWd-2n-Qae">
+                                        <rect key="frame" x="-61" y="61" width="39" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="jX2-S7-wfc" secondAttribute="height" multiplier="1:1" id="AV3-ev-TEu"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xJe-p4-ruv">
+                                <rect key="frame" x="89.666666666666686" y="293" width="211" height="211"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wsf-Yf-KNX">
+                                <rect key="frame" x="89.666666666666686" y="509" width="211" height="211"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jX2-S7-wfc" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.25" id="C9N-qX-yaI"/>
+                            <constraint firstItem="xJe-p4-ruv" firstAttribute="top" secondItem="jX2-S7-wfc" secondAttribute="bottom" constant="5" id="O5w-2U-iw6"/>
+                            <constraint firstItem="ZQu-OC-WDB" firstAttribute="leading" secondItem="jX2-S7-wfc" secondAttribute="leading" constant="-5" id="PEX-3v-Aeh"/>
+                            <constraint firstItem="jX2-S7-wfc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="Q4O-El-fep"/>
+                            <constraint firstItem="jX2-S7-wfc" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="QCe-Xh-wN4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="wsf-Yf-KNX" secondAttribute="bottom" constant="246" id="SsE-Ca-qLp"/>
+                            <constraint firstItem="wsf-Yf-KNX" firstAttribute="centerX" secondItem="xJe-p4-ruv" secondAttribute="centerX" id="VrO-C6-oYW"/>
+                            <constraint firstItem="wsf-Yf-KNX" firstAttribute="top" secondItem="xJe-p4-ruv" secondAttribute="bottom" constant="5" id="Whv-D0-cln"/>
+                            <constraint firstItem="ZQu-OC-WDB" firstAttribute="bottom" secondItem="wsf-Yf-KNX" secondAttribute="bottom" constant="10" id="XjS-7M-zlN"/>
+                            <constraint firstItem="ZQu-OC-WDB" firstAttribute="top" secondItem="jX2-S7-wfc" secondAttribute="top" constant="-10" id="Y90-ar-mGy"/>
+                            <constraint firstItem="wsf-Yf-KNX" firstAttribute="height" secondItem="xJe-p4-ruv" secondAttribute="height" id="YUn-6V-wz3"/>
+                            <constraint firstItem="xJe-p4-ruv" firstAttribute="height" secondItem="jX2-S7-wfc" secondAttribute="height" id="c3N-UR-T74"/>
+                            <constraint firstItem="xJe-p4-ruv" firstAttribute="width" secondItem="jX2-S7-wfc" secondAttribute="height" multiplier="1:1" id="dAx-3S-ZDV"/>
+                            <constraint firstItem="wsf-Yf-KNX" firstAttribute="width" secondItem="xJe-p4-ruv" secondAttribute="height" multiplier="1:1" id="jCV-qG-s1s"/>
+                            <constraint firstItem="ZQu-OC-WDB" firstAttribute="trailing" secondItem="jX2-S7-wfc" secondAttribute="trailing" constant="5" id="jK5-q8-GQ8"/>
+                            <constraint firstItem="xJe-p4-ruv" firstAttribute="centerX" secondItem="jX2-S7-wfc" secondAttribute="centerX" id="ljT-Bf-UqV"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="64.615384615384613" y="-2.1327014218009479"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
